# xemu-dashboard

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  main.c  main.h  menu_eeprom.c  menu_install_dash.c  menu_main.c  menu_system_info.c  network.c  renderer.c  renderer.h  support_dvd.c  support_network.c  support_renderer.c  support_text.c  support_updater.c  text.c
.github/workflows/: build.yml
assets/: background.h  font_roboto.h  font_ubuntu_mono.h
cmake/: PrebuildNXDK.cmake
lib/crypt/: LICENSE
lib/ftpd/: ftp_file.c  ftp_server.c
lib/mbedtls/: LICENSE  glue.c  my_mbedtls_config.h  ws2_32.def  ws2_32.lib
lib/nanoprintf/: LICENSE  nanoprintf.h
lib/xbox_eeprom/: CMakeLists.txt  rc4.c  sha1.c  xbox_eeprom.c
lib/xbox_eeprom/include/: xbox_eeprom.h
lib/xgu/: LICENSE  nv2a_regs.h  xgu.h  xgux.h
scripts/: create_hdd_image.py
